# pdftexter

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test_final_gui.py  test_force_window.py  test_gui.py  test_simple_gui.py
config/: ocr_config.yaml  ocr_config.yaml.example
docs/: ARCHITECTURE.md  PLAN.md  SETUP.md
scripts/: download_deepseek_model.py  install_poppler_windows.ps1  kindle_pdf_convert.py  kindle_screenshot.py  pdf_to_text.py  setup_deepseek_ocr.ps1  test_environment.ps1
src/pdftexter/: __init__.py
src/pdftexter/cli/: __init__.py  __main__.py  kindle_to_markdown.py  pdf_to_text.py
src/pdftexter/kindle/: __init__.py  screenshot.py  window.py
src/pdftexter/ocr/: __init__.py  config.py  deepseek.py  hf_wrapper.py  model_checker.py  model_downloader.py  vllm_wrapper.py
src/pdftexter/pdf/: __init__.py  converter.py  processor.py
src/pdftexter/utils/: __init__.py  file.py  gui.py  image.py
tests/: conftest.py
tests/test_kindle/: __init__.py  test_screenshot.py  test_screenshot_unit.py
tests/test_ocr/: test_config.py  test_deepseek.py  test_vllm_wrapper.py
tests/test_pdf/: __init__.py  test_converter.py  test_converter_gui.py  test_converter_integration.py
tests/test_utils/: __init__.py  test_image.py  test_image_edge_cases.py  test_image_integration.py
