[project]
name = "pdftexter"
version = "0.1.0"
description = "Kindle電子書籍をPDF化し、DeepSeek-OCRでテキストに変換する統合ツール"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "reportlab>=4.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "pdf2image>=1.16.0",
    "huggingface-hub>=0.20.0",  # DeepSeek-OCRモデルダウンロード用
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "vulture>=2.10",
    "pydantic>=2.0.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "ruff>=0.0.280",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.scripts]
pdftexter = "pdftexter.cli.__main__:main"
kindle-screenshot = "pdftexter.kindle.screenshot:main"
kindle-pdf-convert = "pdftexter.pdf.converter:main"
pdf-to-text = "pdftexter.cli.pdf_to_text:main"
